# jbig2enc

./: INSTALL
src/: Makefile.am  com_docshifter_modules_hifi_jbig2_Jbig2Library.h  dsjbig2.cc  dsjbig2.def  jbig2.cc  jbig2.h
vs2019/: jbig2enc.sln
vs2019/dsjbig2/: dsjbig2.vcxproj
vs2019/jbig2/: jbig2.vcxproj
vs2019/libjbig2enc/: libjbig2enc.vcxproj
